--- a/css/montaazmon.css
+++ b/css/montaazmon.css
@@ -1,1 +1,105 @@
-    
+body {
+    direction: rtl;
+    margin: 0px;
+    padding: 0px;
+    background-color: #fafafa;
+    font-family: Dana;
+    font-weight: 400;
+    line-height: 1.43;
+}
+
+.container-one {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 35px;
+    background-color: #fafafa;
+    font-size: 10px;
+}
+
+.section-one {
+    display: flex;
+    flex-direction: row;
+    width: 3%;
+    height: 30px;
+    padding-right: 24px;
+    justify-content: center;
+}
+
+img {
+    width: 45px;
+    height: 35px;
+}
+
+.section-two {
+    display: flex;
+    flex-direction: row;
+    width: 68%;
+    height: 35px;
+    align-items: center;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #fafafa;
+    font-size: 10px;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 6px 12px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: #fafafa;
+}
+
+.section-three {
+    display: flex;
+    flex-direction: row-reverse;
+    width: 30%;
+    height: 35px;
+    padding-left: 24px;
+    font-size: 12px;
+}
+
+a.button1 {
+    display: inline-block;
+    padding: 5px 5px;
+    margin: 5px 5px;
+    text-decoration: none;
+    font-weight: 400;
+    color: black;
+    background-color: #fafafa;
+    text-align: center;
+}
+
+a.button3:hover {
+    background-color: #fafafa;
+}
+
+.container-two {
+    width: 100%;
+    height: 690px;
+}
+
+.img {
+    width: 100%;
+    height: 100%;
+}
+
+.container-three {
+    width: 100%;
+    height: 76px;
+    background-color: #143FDD;
+}
