--- a/css/montaazmon.css
+++ b/css/montaazmon.css
@@ -8,7 +8,7 @@ body {
     line-height: 1.43;
 }
 
-.container-one {
+.menu-container {
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -17,7 +17,7 @@ body {
     font-size: 10px;
 }
 
-.section-one {
+.logo {
     display: flex;
     flex-direction: row;
     width: 3%;
@@ -31,7 +31,7 @@ img {
     height: 35px;
 }
 
-.section-two {
+.menu-items {
     display: flex;
     flex-direction: row;
     width: 68%;
@@ -64,7 +64,7 @@ li a:hover {
     background-color: #fafafa;
 }
 
-.section-three {
+.login-container {
     display: flex;
     flex-direction: row-reverse;
     width: 30%;
@@ -73,7 +73,7 @@ li a:hover {
     font-size: 12px;
 }
 
-a.button1 {
+a.login {
     display: inline-block;
     padding: 5px 5px;
     margin: 5px 5px;
@@ -88,7 +88,7 @@ a.button3:hover {
     background-color: #fafafa;
 }
 
-.container-two {
+.slider-container {
     width: 100%;
     height: 690px;
 }
@@ -98,8 +98,50 @@ a.button3:hover {
     height: 100%;
 }
 
-.container-three {
+.form-container {
     width: 100%;
     height: 76px;
     background-color: #143FDD;
+}
+
+.form-container-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 30px;
+    font-weight: 600;
+    font-size: 11px;
+    background-color: #143FDD;
+    color: white;
+}
+
+.form-container-input {
+    display: flex;
+}
+
+input[type=text],
+select {
+    width: 250px;
+    height: 35px;
+    margin: 4px 0;
+    display: inline-block;
+    border: 1px solid #d8d8d8;
+    border-radius: 16px;
+    box-sizing: border-box;
+}
+
+input[type=submit] {
+    width: 100%;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: #45a049;
 }
