--- a/css/montaazmon.css
+++ b/css/montaazmon.css
@@ -98,7 +98,7 @@ a.button3:hover {
     height: 100%;
 }
 
-.form-container {
+.form-containers {
     width: 100%;
     height: 76px;
     background-color: #143FDD;
@@ -109,7 +109,7 @@ a.button3:hover {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 30px;
+    height: 28px;
     font-weight: 600;
     font-size: 11px;
     background-color: #143FDD;
@@ -118,30 +118,34 @@ a.button3:hover {
 
 .form-container-input {
     display: flex;
-}
-
-input[type=text],
-select {
-    width: 250px;
-    height: 35px;
-    margin: 4px 0;
-    display: inline-block;
-    border: 1px solid #d8d8d8;
-    border-radius: 16px;
-    box-sizing: border-box;
-}
-
-input[type=submit] {
+    justify-content: center;
+    align-items: flex-start;
     width: 100%;
-    background-color: #4CAF50;
+    height: 60px;
+    background-color: #143FDD;
     color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
 }
 
-input[type=submit]:hover {
-    background-color: #45a049;
+input {
+    width: 230px;
+    height: 30px;
+    padding: 6px 10px;
+    margin: 8px 0;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    font-family: dana;
+    font-weight: 600;
+}
+
+.button {
+    width: 230px;
+    height: 30px;
+    padding: 6px 10px;
+    margin: 8px 0;
+    color: white;
+    background-color: #FFB300;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    font-family: dana;
+    font-weight: 500;
 }
