--- a/css/montaazmon.css
+++ b/css/montaazmon.css
@@ -2,50 +2,53 @@ body {
     direction: rtl;
     margin: 0px;
     padding: 0px;
-    background-color: #fafafa;
+    background-color: #ECEFF1;
     font-family: Dana;
     font-weight: 400;
-    line-height: 1.43;
 }
 
 .menu-container {
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 35px;
+    height: 38.98px;
     background-color: #fafafa;
-    font-size: 10px;
+    font-size: 12px;
+    padding-right: 24px;
 }
 
 .logo {
     display: flex;
     flex-direction: row;
-    width: 3%;
-    height: 30px;
-    padding-right: 24px;
     justify-content: center;
+    align-items: center;
+    background-color: #fafafa;
+    width: 97.59px;
 }
 
 img {
-    width: 45px;
-    height: 35px;
+    width: 73.59px;
+    height: 22.22px;
+}
+
+.logo:hover {
+    background-color: #eeeded;
 }
 
 .menu-items {
     display: flex;
     flex-direction: row;
     width: 68%;
-    height: 35px;
     align-items: center;
+    line-height: 27px;
 }
 
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    overflow: hidden;
     background-color: #fafafa;
-    font-size: 10px;
+    font-size: 12px;
 }
 
 li {
@@ -54,38 +57,39 @@ li {
 
 li a {
     display: block;
-    color: black;
-    text-align: center;
+    color: #3A3A3A;
+    font-weight: 500;
     padding: 6px 12px;
     text-decoration: none;
 }
 
 li a:hover {
-    background-color: #fafafa;
+    background-color: #eeeded;
 }
 
 .login-container {
     display: flex;
     flex-direction: row-reverse;
-    width: 30%;
-    height: 35px;
+    width: 467px;
     padding-left: 24px;
     font-size: 12px;
+    font-weight: 500;
 }
 
 a.login {
-    display: inline-block;
-    padding: 5px 5px;
-    margin: 5px 5px;
+    display: flex;
+    padding: 6px 12px;
+    margin: 6px 0px;
+    align-self: center;
     text-decoration: none;
     font-weight: 400;
     color: black;
     background-color: #fafafa;
-    text-align: center;
 }
 
-a.button3:hover {
-    background-color: #fafafa;
+a.login:hover {
+    background-color: #eeeded;
+    border-radius: 15px;
 }
 
 .slider-container {
@@ -100,7 +104,7 @@ a.button3:hover {
 
 .form-containers {
     width: 100%;
-    height: 76px;
+    height: 90px;
     background-color: #143FDD;
 }
 
@@ -133,8 +137,9 @@ input {
     margin: 8px 0;
     border: 1px solid #ccc;
     border-radius: 10px;
+    font-size: 12px;
     font-family: dana;
-    font-weight: 600;
+    font-weight: 500;
 }
 
 .button {
@@ -148,4 +153,47 @@ input {
     border-radius: 10px;
     font-family: dana;
     font-weight: 500;
+}
+
+.container-four {
+    display: grid;
+    width: 1361px;
+    height: 1444px;
+    background-color: #FFFFFF;
+    justify-content: space-around;
+    border-radius: 20px;
+    margin: 15px auto;
+}
+
+.item {
+    display: flex;
+    width: 100%;
+    height: 24px;
+    background-color: yellow;
+    font-style: normal;
+    font-weight: 600;
+    font-family: dana;
+    font-size: 14px;
+    margin: 15px;
+}
+
+.item1 {
+    display: flex;
+    width: 421px;
+    height: 122.26;
+    background-color: tomato;
+}
+
+.item2 {
+    display: flex;
+    width: 421px;
+    height: 122.26;
+    background-color: blueviolet;
+}
+
+.item3 {
+    display: flex;
+    width: 421px;
+    height: 122.26;
+    background-color: burlywood;
 }
