--- a/css/montaazmon.css
+++ b/css/montaazmon.css
@@ -455,6 +455,7 @@ button.button:hover {
     border-radius: 10px;
     color: white;
     font-size: 13px;
+    cursor: pointer;
 }
 
 .level {
@@ -467,6 +468,7 @@ button.button:hover {
     color: #6C6C6C;
     border: 1px solid rgb(221, 221, 221);
     font-size: 14px;
+    cursor: pointer;
 }
 
 .box-banner {
