--- a/css/montaazmon.css
+++ b/css/montaazmon.css
@@ -8,7 +8,7 @@ body {
     font-weight: 400;
 }
 
-.menu-container {
+.menu-navbar {
     display: flex;
     flex-direction: row;
     height: 38.98px;
@@ -29,7 +29,7 @@ body {
     width: 97.59px;
 }
 
-img {
+.logo-monta {
     width: 73.59px;
     height: 22.22px;
 }
@@ -38,7 +38,7 @@ img {
     background-color: #eeeded;
 }
 
-.menu-items {
+.menu {
     display: flex;
     flex-direction: row;
     width: 68%;
@@ -46,19 +46,17 @@ img {
     line-height: 27px;
 }
 
-ul {
+.menu-items {
     list-style-type: none;
+    display: flex;
+    flex-direction: row;
     margin: 0;
     padding: 0;
     background-color: #fafafa;
     font-size: 12px;
 }
 
-li {
-    float: left;
-}
-
-li a {
+.link {
     display: block;
     color: #3A3A3A;
     font-weight: 500;
@@ -66,11 +64,11 @@ li a {
     text-decoration: none;
 }
 
-li a:hover {
+.link:hover {
     background-color: #eeeded;
 }
 
-.login-container {
+.login {
     display: flex;
     flex-direction: row-reverse;
     width: 480px;
@@ -79,7 +77,7 @@ li a:hover {
     font-weight: 500;
 }
 
-a.login {
+.login-register {
     display: flex;
     padding: 6px 12px;
     margin: 6px 0px;
@@ -90,7 +88,7 @@ a.login {
     background-color: #fafafa;
 }
 
-a.login:hover {
+.login-register:hover {
     background-color: #eeeded;
     border-radius: 15px;
 }
@@ -147,7 +145,6 @@ input {
     outline: none;
     border-radius: 16px;
     font-size: 12px;
-    font-family: dana;
     font-weight: 500;
 }
 
@@ -159,7 +156,6 @@ input {
     background-color: #FFB300;
     border: 1px solid #ccc;
     border-radius: 16px;
-    font-family: dana;
     font-weight: 500;
     line-height: 20px;
 }
@@ -463,7 +459,6 @@ button.button:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: white;
     border-radius: 10px;
     color: #6C6C6C;
     border: 1px solid rgb(221, 221, 221);
