--- a/css/montaazmon.css
+++ b/css/montaazmon.css
@@ -98,12 +98,12 @@ body {
     height: 690px;
 }
 
-.img {
+.monta-academy-registration {
     width: 100%;
     height: 100%;
 }
 
-.form-containers {
+.form {
     width: 100%;
     height: 136px;
     background-color: #143FDD;
@@ -112,7 +112,7 @@ body {
     z-index: 1;
 }
 
-.form-container-content {
+.form-content {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -125,7 +125,7 @@ body {
     color: white;
 }
 
-.form-container-input {
+.form-input {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -148,7 +148,7 @@ input {
     font-weight: 500;
 }
 
-.button {
+.applying {
     width: 292px;
     height: 44px;
     padding: 6px 10px;
@@ -160,7 +160,7 @@ input {
     line-height: 20px;
 }
 
-button.button:hover {
+.applying:hover {
     background-color: #ff9900;
 }
 
