--- a/css/montaazmon.css
+++ b/css/montaazmon.css
@@ -266,7 +266,7 @@ input {
     text-decoration: none;
 }
 
-.box-slider-row-four {
+.card-exam {
     width: 635px;
     height: 240px;
     margin-top: 15px;
@@ -274,7 +274,7 @@ input {
     border-radius: 20px;
 }
 
-.box-slider-row-four-pic {
+.card-exam-pic {
     width: 100%;
     height: 52%;
     border-bottom: 1px solid rgb(231, 231, 231);
@@ -282,7 +282,7 @@ input {
     justify-content: center;
 }
 
-.image-paye {
+.card-exam-image {
     width: 421.33px;
     height: 123.98px;
     background-color: #e2e2e2;
@@ -290,7 +290,7 @@ input {
     border-top-right-radius: 20px;
 }
 
-.box-slider-row-four-content {
+.card-exam-text {
     width: 100%;
     height: 47.8%;
     background-color: #F9F9F9;
@@ -299,7 +299,7 @@ input {
     border-bottom-right-radius: 20px;
 }
 
-.box-slider-row-four-content-level {
+.card-exam-level {
     display: flex;
     justify-content: center;
     align-items: baseline;
@@ -307,7 +307,7 @@ input {
     height: 45%;
 }
 
-.box-slider-row-four-content-price {
+.card-exam-price {
     width: 100%;
     height: 15%;
     display: flex;
@@ -315,7 +315,7 @@ input {
     color: rgb(146, 145, 145);
 }
 
-.box-slider-row-four-content-view {
+.card-exam-link {
     display: flex;
     justify-content: center;
     align-items: center;
