--- a/css/montaazmon.css
+++ b/css/montaazmon.css
@@ -3,7 +3,7 @@ body {
     margin: 0px;
     padding: 0px;
     background-color: #ECEFF1;
-    font-family: Dana, BlinkMacSystemFont, -apple-system, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-family: Dana;
     ;
     font-weight: 400;
 }
@@ -160,6 +160,7 @@ input {
     font-weight: 500;
     line-height: 20px;
     font-family: dana;
+    cursor: pointer;
 }
 
 .applying:hover {
